--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -5,44 +5,35 @@
   width: 100%;
   height: 56px;
   padding: 0;
-  background: #673AB7;
+  background: var(--brand-color);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   z-index: 50;
+  color: var(--text-color);
 }
 
-.header h1 {
-  float: left;
-  margin: 0;
+.header .container {
+  max-width: 504px;
+  margin: 0 auto;
+}
+
+.header .logo {
+  height: 50px;
   padding: 0 15px;
-  font-size: 24px;
-  line-height: 56px;
-  font-weight: 400;
-  color: #FFF;
-}
-
-.header nav {
-  float: right;
-  font-size: 100%;
-}
-
-.header nav a {
-  display: inline-block;
-  height: 56px;
-  line-height: 56px;
-  padding: 0 15px;
-  min-width: 50px;
   text-align: center;
-  background: rgba(255,255,255,0);
-  text-decoration: none;
-  color: #FFF;
-  will-change: background-color;
 }
 
-.header nav a:hover,
-.header nav a:active {
-  background: rgba(0,0,0,0.2);
+.header .logo img {
+  display: inline-block;
+  vertical-align: middle;
+  height: 40px;
+  margin-right: 10px;
 }
 
-.header nav a.active {
-  background: rgba(0,0,0,0.4);
+.header .logo h1 {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 20px;
+  line-height: 56px;
+  font-weight: 600;
+  margin: 0;
 }
