--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,3 +1,9 @@
+:root {
+  --brand-color: #fed029;
+  --text-color: #262626;
+  --white-color: #fff;
+}
+
 html, body {
   height: 100%;
   width: 100%;
@@ -6,9 +12,10 @@ html, body {
   background: #FAFAFA;
   font-family: 'Helvetica Neue', arial, sans-serif;
   font-weight: 400;
-  color: #444;
+  color: var(--text-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--text-color);
 }
 
 * {
