--- a/src/components/pokemon/style.css
+++ b/src/components/pokemon/style.css
@@ -8,10 +8,17 @@
 }
 
 .container .card {
+  display: inline-block;
   border: 2px solid var(--text-color);
   border-radius: 8px;
   padding: 15px;
   background-color: var(--white-color);
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+.container .card img {
+  width: 48px;
 }
 
 .container p {
