--- a/src/routes/profile/style.css
+++ b/src/routes/profile/style.css
@@ -1,5 +1,70 @@
 .profile {
-  padding: 56px 20px;
   min-height: 100%;
   width: 100%;
+}
+
+.profile .container {
+  max-width: 504px;
+  margin: 56px auto 0 auto;
+  min-height: 100%;
+  background-color: var(--text-color);
+  text-align: center;
+}
+
+.profile .container .header {
+  background-color: var(--white-color);
+}
+
+.profile .container img {
+  width: 50%;
+}
+
+.profile .container .card {
+  padding: 10px;
+  background-color: var(--brand-color);
+  max-width: 80%;
+  margin: -30px auto 0 auto;
+  border-radius: 8px;
+}
+
+.profile .container .card h1 {
+  font-size: 18px;
+}
+
+.profile .summary {
+  padding: 20px 0;
+}
+
+.profile .summary > div {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 33.3333%;
+}
+
+.profile .summary > div p {
+  font-size: 13px;
+  font-weight: 700;
+  margin-top: 0;
+  min-height: 22px;
+}
+
+.profile .summary .weight p,
+.profile .summary .height p {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.profile .summary > div p span {
+  display: block;
+}
+
+.profile .summary > div small {
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 10px;
+  letter-spacing: 1px;
+}
+
+.profile .similars h2 {
+  color: var(--white-color);
 }
