--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -4,3 +4,32 @@
   min-height: 100%;
   background-color: var(--text-color);
 }
+
+.home .search {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background-color: var(--brand-color);
+  margin-top: -110px;
+  transition: .5s ease margin;
+  border-radius: 0 0 8px 8px;
+}
+
+.home .search.active {
+  margin-top: 56px;
+}
+
+.home .search input {
+  padding: 15px;
+  width: 100%;
+  text-align: center;
+  border: 4px solid var(--brand-color);
+  border-radius: 0 0 8px 8px;
+  background-color: transparent;
+  font-size: 14px;
+}
+
+.home .search input:focus {
+  background-color: var(--white-color);
+}
