--- a/src/components/pokemon/style.css
+++ b/src/components/pokemon/style.css
@@ -9,6 +9,7 @@
 
 .container .card {
   display: inline-block;
+  width: 100%;
   border: 2px solid var(--text-color);
   border-radius: 8px;
   padding: 15px;
