--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -9,6 +9,7 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   z-index: 50;
   color: var(--text-color);
+  text-align: center;
 }
 
 .header .container {
@@ -19,7 +20,7 @@
 .header .logo {
   height: 50px;
   padding: 0 15px;
-  text-align: center;
+  color: var(--text-color);
 }
 
 .header .logo img {
