Enhanced similars css

--- a/src/routes/profile/style.css
+++ b/src/routes/profile/style.css
@@ -65,6 +65,11 @@
   letter-spacing: 1px;
 }
 
+.profile .similars {
+  margin-top: 50px;
+}
+
 .profile .similars h2 {
+  margin-bottom: 0;
   color: var(--white-color);
 }
